# reaction

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  .space.kts  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.md  package.json
.artifacts/license/: APACHE.LICENSE  LICENSE
.config/: default.config.toml
.docker/: docker-compose.yml
.github/: dependabot.yml
.github/workflows/: clippy.yml  docker.yml  rust-clippy.yml  rust.yml
.space/: devfile.yaml
code/crates/lib/: Cargo.toml  LICENSE
deploy/: docker-compose.yml
lib/tests/: simple.rs
reaction/: Cargo.toml  README.md
reaction/src/: application.rs  context.rs  main.rs  settings.rs  states.rs
reaction/src/api/: interface.rs  mod.rs
reaction/src/api/routes/: auth.rs  docs.rs  index.rs  mod.rs
reaction/src/cli/: commands.rs  interface.rs  mod.rs
reaction/src/cli/args/: mod.rs  power.rs
scripts/: publish.sh  setup.sh
scripts/cargo/: test.sh
src/: lib.rs  main.rs
src/components/: mod.rs
