[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Reaction is a full-stack decentralized community center enabling users to reap the benefits of owning their information"
edition = "2021"
homepage = "https://scattered-systems.github.io/reaction/"
keywords = []
license = "MIT"
name = "reaction-sdk"
readme = "README.md"
repository = "https://github.com/scattered-systems/reaction"
version = "0.1.1"

[[bin]]
bench = false
name = "reaction"

[features]
default = []
full = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
scsys = { features = ["full"], version = ">=0.1.4" }

[dev-dependencies]
